--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "astro": "^5.8.1",
     "gray-matter": "^4.0.3",
     "marked": "^15.0.12",
+    "rehype": "^13.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "remark-smartypants": "^3.0.0"
   },
   "scripts": {
